--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,21 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+
+  <!-- Custom fonts for this template -->
+  <link rel="stylesheet" type="text/css" href="assets/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+  <link rel="stylesheet" type="text/css"
+        href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic">
+
+  <!-- Plugin CSS -->
+  <link rel="stylesheet" type="text/css" href="assets/magnific-popup/magnific-popup.css">
+
+  <!-- Custom styles for this template -->
+  <link rel="stylesheet" href="assets/freelancer/freelancer.min.css">
 </head>
 <body>
   <app-root></app-root>
